--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
+sudo: false
+
 language: python
+
 python:
   - 3.6
+
+#install dependencies
 install: pip install -r requirements.txt
 
 # command to install dependencies
-script: python main.py
+script: coverage run tests.py
+
+after_success:
+  - codecov
 
 branches:
   only:
