--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,7 @@ python:
 install: pip install -r requirements.txt
 
 # command to install dependencies
-script: coverage run tests.py
-
-after_success:
-  - codecov
+script: python tests.py
 
 branches:
   only:
