--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
