--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ numpy==1.14.5
 pandas==0.23.2
 python-dateutil==2.7.3
 pytz==2018.5
-scikit-learn==0.19.1
+scikit-learn==0.23.1
+scikit-plot==0.3.7
 scipy==1.1.0
 six==1.11.0
 sklearn==0.0
