--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 click==6.7
 coverage==4.5.1
+cycler==0.10.0
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap4==4.0.2
+imbalanced-learn==0.7.0
+imblearn==0.0
 itsdangerous==0.24
 Jinja2==2.10
 joblib==0.12.0
+kiwisolver==1.2.0
 MarkupSafe==1.0
+matplotlib==3.2.2
 numpy==1.14.5
 pandas==0.23.2
+pyparsing==2.4.7
 python-dateutil==2.7.3
 pytz==2018.5
 scikit-learn==0.23.1
@@ -16,5 +22,6 @@ scikit-plot==0.3.7
 scipy==1.1.0
 six==1.11.0
 sklearn==0.0
+threadpoolctl==2.1.0
 visitor==0.1.3
 Werkzeug==0.14
