--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,7 @@ Jinja2==2.10
 joblib==0.12.0
 kiwisolver==1.2.0
 MarkupSafe==1.0
-<<<<<<< HEAD
-matplotlib==3.2.2
-numpy==1.14.5
-=======
 numpy==1.22.2
->>>>>>> 25c3ea7124b595fba244007f02bc74a00595543b
 pandas==0.23.2
 pyparsing==2.4.7
 python-dateutil==2.7.3
@@ -29,3 +24,4 @@ sklearn==0.0
 threadpoolctl==2.1.0
 visitor==0.1.3
 Werkzeug==0.14
+Flask-WTF
